...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark_Gray_Background"
    android:orientation="vertical">

    <EditText
        android:id="@+id/habit_title"
        android:layout_width="149dp"
        android:layout_height="43dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/rounded_corners_user_input"
        android:gravity="center"
        android:hint="Habit Title"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195">
    </EditText>

    <EditText
        android:id="@+id/habit_reason"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/rounded_corners_user_input"
        android:gravity="center"
...
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407"></TextView>

    <ImageButton
        android:id="@+id/start_date"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:hint="YYYY"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/Lighter_Gray_Text"
        android:textColorHint="@color/Lighter_Gray_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/end_date"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552"></TextView>

    <TextView
        android:id="@+id/end_day"
...
        app:layout_constraintEnd_toStartOf="@+id/saturday"
        app:layout_constraintStart_toEndOf="@+id/thursday"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />

    <Button
        android:id="@+id/wednesday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:text="W"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/thursday"
        app:layout_constraintStart_toEndOf="@+id/tuesday"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />

    <Button
        android:id="@+id/tuesday"
        android:layout_width="40dp"
...
        android:gravity="center"
        android:text="T"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wednesday"
        app:layout_constraintStart_toEndOf="@+id/monday"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="8dp"
...
        app:layout_constraintEnd_toStartOf="@+id/tuesday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="323dp"
        android:layout_marginBottom="158dp"
        android:background="#00FFFFFF"
        android:src="?attr/actionModeCloseDrawable"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/Lighter_Gray_Text" />

    <ImageButton
        android:id="@+id/confirm"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="323dp"
        android:layout_marginBottom="158dp"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/ic_done"
...
