...
        app:layout_constraintBottom_toBottomOf="@+id/t_1t"
        app:layout_constraintStart_toEndOf="@+id/t_1t"
        app:layout_constraintTop_toTopOf="@+id/t_1t"
        app:tint="@color/Lighter_Gray_Text" />

    <Button
        android:id="@+id/goTo_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@color/Medium_Gray_Background"
        android:paddingHorizontal="10dp"
        android:text="Skip to Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
